--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://Storm:master2033@cluster0.zqzzupe.mongodb.net/ShopifyProductBarCodeScanner?retryWrites=true&w=majority
+DISCOGS_API_TOKEN=ecKgPlvZYvaKDQORiWShesQqEQavkfHHiezplLhP
